# 2023-tfg-oscar-martinez

./: README.md
docs/: _config.yml  index.html
docs/_posts/: 2023-06-12-Week-0.md  2023-06-26-week-1.md  2023-07-17-week-1.md  2023-07-17-week-2.md  2023-07-24-week-3.md  2023-07-24-week-4.md  2023-09-04-week-4.md  2023-09-11-week-5.md  2023-09-14-Semana-0.md  2023-09-18-week-6.md  2023-09-25-week-7.md  2023-10-02-week-8.md  2023-10-09-week-9.md
log/: latest_list
src/tests/: basic.py  bt.xml  sequence.py
src/webbt_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/webbt_ws/install/btpy/share/btpy/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/webbt_ws/install/btpy/share/btpy/actions/: CheckObstacle.py  Move.py
src/webbt_ws/install/btpy/share/btpy/btpy/: parser.py  translator.py
src/webbt_ws/install/btpy/share/btpy/launch/: demo.launch.py
src/webbt_ws/install/btpy/share/btpy/resource/: final_tree.xml  tree.xml
src/webbt_ws/install/rplidar_ros/include/: rplidar_node.hpp  visibility.h
src/webbt_ws/log/: latest_build
src/webbt_ws/src/btpy/: package.xml  setup.cfg  setup.py
src/webbt_ws/src/btpy/actions/: CheckObstacle.py  Move.py  Turn.py
src/webbt_ws/src/btpy/btpy/: parser.py  translator.py
src/webbt_ws/src/btpy/resource/: final_tree.xml  tree.xml
src/webbt_ws/src/btpy/utils/: output.xml  parser.py
src/webbt_ws/src/py_gardener/: setup.py
src/webbt_ws/src/py_gardener copy/actions/: CheckObstacle.py  Forward.py
src/webbt_ws/src/py_gardener copy/launch/: demo.launch.py
(+1671 files in other folders)
