<?xml version="1.0"?>
<package format="3">
  <name>btpy</name>
  <version>0.0.0</version>
  <description>A bridge to use BT.cpp xml in py_trees</description>
  <maintainer email="oscar.personal@tutanota.com">Óscar Martínez</maintainer>
  <license>BSD</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>py_trees_ros</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
